Исправляет код по линтерам

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,7 +17,7 @@
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__logo" href="index.html">
-       <img class="main-header__logo main-header__logo--text" src="img/logo-text-header.svg" width="101" height="18" alt="">
+      <img class="main-header__logo main-header__logo--text" src="img/logo-text-header.svg" width="101" height="18" alt="">
       <span class="visually-hidden">Логотип магазина Кэт Энерджи.</span>
     </a>
     <nav class="main-nav main-nav--nojs">
@@ -29,7 +29,7 @@
           <a class="main-nav__link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--current" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="form.html">Подбор программы</a>
@@ -237,7 +237,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper">
       <a class="main-footer__logo-link" href="index.html">
-        <img class="main-footer__logo" src="img/logo-text-footer.svg" width="128" height="24" alt="">
+        <img class="main-footer__logo" src="img/logo-text-footer.svg" width="128" height="24" alt="Логотип">
       </a>
       <ul class="main-footer__social social">
         <li class="social__item">
